# cli-or-gui

./: Cargo.toml  README.md
src/: hide_terminal.rs  is_elevated.rs  is_terminal.rs  lib.rs  relaunch_as_elevated.rs
